navigation bar with signout & notify on

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="log_in">Log in</string>
     <string name="sign_in">Sign in</string>
     <string name="back_to_registration">back to registration</string>
+    <string name="signout">signout</string>
+    <string name="notify">Notify</string>
 </resources>
